feat: restructure Family.Book.Apis.Functions and add FamilyBook.Function with necessary configurations

--- a/src/Tests/Family.Book.Tests/Family.Book.Tests.csproj
+++ b/src/Tests/Family.Book.Tests/Family.Book.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Apis\Family.Book.Apis.Functions\Family.Book.Apis.Functions.csproj" />
+    <ProjectReference Include="..\..\Apis\FamilyBook.Function\FamilyBook.Function.csproj" />
   </ItemGroup>
 
 </Project>
