--- a/src/Businesses/Family.Book.Business/Family.Book.Business.csproj
+++ b/src/Businesses/Family.Book.Business/Family.Book.Business.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\..\Infrastructures\Family.Book.Infrastructure\Family.Book.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
