--- a/src/Apis/FamilyBook.Function/Properties/launchSettings.json
+++ b/src/Apis/FamilyBook.Function/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Family.Book.Apis.Functions": {
+    "FamilyBook.Apis.Functions": {
       "commandName": "Project",
       "commandLineArgs": "--port 7233",
       "launchBrowser": false
