--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,23 @@ terraform.tfstate*
 *.svclog
 *.svcmap
 
+# Node.js / React / Vite / TypeScript
+node_modules/
+dist/
+build/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.tsbuildinfo
+.cache/
+.temp/
+.tmp/
+
 # OS
 .DS_Store
 Thumbs.db
